2003-09-29  Fumitoshi UKAI  <ukai@debian.or.jp>

	* Makefile.in (distclean): remove posubst
	* Makefile.in (functable.c): fix cannot open file `b' for reading

2003-09-27  Fumitoshi UKAI  <ukai@debian.or.jp>

	* funcname.tab: generated from DEFUN
	* main.c menu.c: use DEFUN
	* conv.c ucs_eucjp.h ucs_latin1.h: deleted

2003-09-26  Fumitoshi UKAI  <ukai@debian.or.jp>

	* add posubst,  compile-time message l10n
	* Makefile.in: @POSUBST@
	* acinclude.m4(AC_W3M_M17N): add POSUBST, POLANG
		--enable-messagel10n
	* configure.in (W3M_LANG): subst
		(AM_GET_GNUTEXT): if messagel10n enabled, don't use NLS
		(AC_OUTOUT): add posubst, chmod +x
	* menu.c: remove if LANG == JA messages
	* rc.c: ditto

2003-09-26  Fumitoshi UKAI  <ukai@debian.or.jp>

	* remove ./intl
	* configure.in: external fo AM_GNU_GETTEXT
	* Makefile.in: remove intl, INTLTARGET

2003-09-25  Fumitoshi UKAI  <ukai@debian.or.jp>

	* fix [w3m-dev 03975] Re: gettextize
	* Makefile.in: add INTLTARGET, NLSTARGET
		cleanup
	* configure.in: INTLTARGET=intl,NLSTARGET=po if USE_NLS

2003-09-25  Fumitoshi UKAI  <ukai@debian.or.jp>

	* gettextize
	* Makefile.in: updated
	* menu.c: gettextize
	* rc.c: gettextize
	* intl/.cvsignore: added
	* po/.cvsignore: added
	* po/Makevars: added
	* po/Makevars.template: removed
	* po/POTFILES.in: updated
	* po/w3m.pot: created
	* po/ja.po: created

2003-09-24  Fumitoshi UKAI  <ukai@debian.or.jp>

	* based on [w3m-dev 03970]
	  SAKAI Kiyotaka <ksakai@kso.netwk.ntt-at.co.jp>
	* acinclude.m4 (AC_W3M_IMAGE): add IMGTARGETS
	* w3mimg/Makefile.in (all): use @IMGTARGETS@

2003-09-24  Fumitoshi UKAI  <ukai@debian.or.jp>

	* gettextize initial modifications
	* configure.in Makefile.in aclocal.m4 config.h.in: 
		update to support NLS
	* ABOUT-NLS: added
	* config.rpath: added
	* mkinstalldirs: added
	* intl/: added
	* po/: added
	* fm.h: NLS support
	* main.c (main): add gettext trigger

2003-09-23  Fumitoshi UKAI  <ukai@debian.or.jp>

	* more autoconfisicate
